--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,30 @@
-absl-py==0.13.0
-argon2-cffi==20.1.0
+asgiref==3.4.1
 astroid==2.5.1
-astunparse==1.6.3
-async-generator==1.10
+astropy==4.3.post1
 attrs==21.2.0
 backcall==0.2.0
 bleach==3.3.0
-cachetools==4.2.2
 certifi==2021.5.30
-cffi==1.14.5
-charset-normalizer==2.0.3
+chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
+confuse==1.5.0
 cycler==0.10.0
+data==0.4
 decorator==5.0.9
 defusedxml==0.7.1
-dlib==19.22.0
+efficientnet==1.1.1
 entrypoints==0.3
-face-recognition==1.3.0
-face-recognition-models==0.3.0
 Flask==2.0.1
-flatbuffers==1.12
-gast==0.4.0
-google-auth==1.33.1
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-greenlet==1.1.0
-grpcio==1.34.1
-guidata==1.7.9
-guiqwt==3.0.6
+funcsigs==1.0.2
+future==0.18.2
 gunicorn==20.1.0
 h5py==3.1.0
+htmlmin==0.1.12
 idna==3.2
+imagecodecs==2021.7.30
+ImageHash==4.2.1
+imageio==2.9.0
 ipykernel==5.5.5
 ipython==7.23.1
 ipython-genutils==0.2.0
@@ -49,8 +42,7 @@ jupyter-console==6.4.0
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
+Keras-Applications==1.0.8
 kiwisolver==1.3.1
 lazy-object-proxy==1.5.2
 Markdown==3.3.4
@@ -63,11 +55,9 @@ nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
+networkx==2.6.2
 notebook==6.4.0
-numpy==1.19.5
-oauthlib==3.1.1
-opencv-python==4.5.2.52
-opt-einsum==3.3.0
+numpy==1.19.5 
 packaging==20.9
 pandas==1.2.4
 pandocfilters==1.4.3
@@ -80,6 +70,7 @@ protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pyerfa==2.0.0
 Pygments==2.9.0
 pylint==2.7.2
 pyparsing==2.4.7
@@ -91,14 +82,17 @@ pyrsistent==0.17.3
 python-dateutil==2.8.1
 PythonQwt==0.9.0
 pytz==2021.1
+PyWavelets==1.1.1
 pywin32==227
 pywinpty==1.1.1
+PyYAML==5.4.1
 pyzmq==22.0.3
 qtconsole==5.1.0
 QtPy==1.9.0
 requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
+scikit-image==0.18.2
 scikit-learn==0.24.2
 scipy==1.6.3
 seaborn==0.11.1
@@ -118,6 +112,7 @@ termcolor==1.1.0
 terminado==0.10.0
 testpath==0.5.0
 threadpoolctl==2.1.0
+tifffile==2021.7.30
 toml==0.10.2
 tornado==6.1
 traitlets==5.0.5
