--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 greenlet==1.1.0
 grpcio==1.34.1
+guidata==1.7.9
+guiqwt==3.0.6
 gunicorn==20.1.0
 h5py==3.1.0
 htmlmin==0.1.12
@@ -105,6 +107,8 @@ python-dateutil==2.8.1
 PythonQwt==0.9.0
 pytz==2021.1
 PyWavelets==1.1.1
+pywin32==227
+pywinpty==1.1.1
 PyYAML==5.4.1
 pyzmq==22.0.3
 qtconsole==5.1.0
