--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,6 @@ Flask==2.0.1
 flatbuffers==1.12
 funcsigs==1.0.2
 future==0.18.2
-guiqwt
 gunicorn==20.1.0
 h5py==3.1.0
 htmlmin==0.1.12
@@ -71,6 +70,7 @@ nbformat==5.1.3
 nest-asyncio==1.5.1
 networkx==2.6.2
 notebook==6.4.0
+numpy
 numpy==1.19.5
 oauthlib==3.1.1
 opencv-python==4.5.2.52
