--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ Keras-Applications==1.0.8
 kiwisolver==1.3.1
 lazy-object-proxy==1.5.2
 lesscpy==0.14.0
+llvmlite
 MarkupSafe==2.0.1
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
